feat: adding the home section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         }
         .div-1{
             width: 60%;
+            text-align: justify;
+            padding: 0px 100px 0px 30px;
+        }
+        .div-1 h1 span{
+            color: #4406c8;
+        }
+        .div-1 p{
+            color: gray;
+            font-size: 14px;
         }
         .div-2{
             width: 40%;
@@ -32,7 +41,7 @@
            <div class="container">
             <div class="same-margin div-1">
                 <div class="content">
-                    <h2>John <span>Doe.</span></h2>
+                    <h1>John <span>Doe.</span></h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat voluptate exercitationem eligendi deserunt perferendis dolorem tempore, nemo ex. Ab cumque pariatur rem neque repudiandae accusamus odio nihil ducimus! Sapiente, repellendus.</p>
                 </div>
             </div>
