--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
    </head>
    <body>
-       <section>
+       <section id="home-section">
            <div class="container">
             <div class="same-margin div-1">
                 <div class="content">
