--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         .div-2 img{
             border-radius: 5px;
         }
+
+        #skills-section{
+            text-align: center;
+        }
+        .skills-container{
+            display: flex;
+            justify-content: center;
+        }
+        .skill-card{
+            background-color: #ffffff;
+            color: #000;
+            width: 30%;
+            margin: auto 15px;
+        }
     </style>
    </head>
    <body>
@@ -48,6 +62,31 @@
             <div class="same-margin div-2">
                 <img src="./Male-member.jpg" height="340" width="300" alt="user image">
          </div>
+      </div>
+       </section>
+
+       <section id="skills-section">
+        <h1>Specialised In</h1>
+         <div class="skills-container">
+             <div class="skill-card skill-1">
+                 <h2>Skill 1</h2> 
+                 <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quas assumenda perspiciatis quo ex cumque nostrum quam voluptate animi ut, temporibus.
+                </p>
+             </div>
+             <div class="skill-card skill-2">
+                <h2>Skill 2</h2> 
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quas assumenda perspiciatis quo ex cumque nostrum quam voluptate animi ut, temporibus.
+                </p>
+             </div>
+              <div class="skill-card skill-3">
+                <h2>Skill 3</h2> 
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quas assumenda perspiciatis quo ex cumque nostrum quam voluptate animi ut, temporibus.
+                </p>
+            </div>
+             </div>
        </section>
    </body>
 </html>
