feat: fully finalised section 2 of our website

--- a/index.html
+++ b/index.html
@@ -41,12 +41,22 @@
         .skills-container{
             display: flex;
             justify-content: center;
+            height: 70vh;
         }
         .skill-card{
             background-color: #ffffff;
             color: #000;
             width: 30%;
             margin: auto 15px;
+            border-radius: 6px;
+            padding: 80px 3px 30px 3px;
+        }
+        .skill-card h2{
+            font-weight: lighter;
+        }
+        .skill-card p{
+            color: gray;
+            font-size: 12px;
         }
     </style>
    </head>
