chore: introducing the work section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         }
         .skill-card p{
             color: gray;
-            font-size: 12px;
+        }
+
+        #work-section{
+            text-align: center;
         }
     </style>
    </head>
@@ -97,6 +100,10 @@
                 </p>
             </div>
              </div>
+       </section>
+
+       <section id="work-section"> 
+        <h1>Worked On</h1>
        </section>
    </body>
 </html>
