--- a/index.html
+++ b/index.html
@@ -104,6 +104,30 @@
 
        <section id="work-section"> 
         <h1>Worked On</h1>
+        <div class="work-container">
+            <div class="work-content work 1">
+                <img src="./work-image.jpg" width="334" height="250" alt="previous work 1">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
+                </p>
+                <button>Continue Reading</button>
+            </div>
+            <div class="work-content work 2">
+                <img src="./work-image.jpg" width="334" height="250" alt="previous work 2">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
+                </p>
+                <button>Continue Reading</button>
+            </div>
+            <div class="work-content work 3">
+                <img src="./work-image.jpg" width="334" height="250" alt="previous work 3">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
+
+                </p>
+                <button>Continue Reading</button>
+            </div>
+        </div>        
        </section>
    </body>
 </html>
