feat: previous works added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .skills-container{
             display: flex;
             justify-content: center;
-            height: 70vh;
+            height: 80vh;
         }
         .skill-card{
             background-color: #ffffff;
@@ -60,6 +60,38 @@
 
         #work-section{
             text-align: center;
+        }
+        .work-container{
+            display: flex;
+            justify-content: center;
+            color: gray;
+            height: 80vh;
+        }
+        .work-content{
+            border: 1px solid gray;
+            width: 27%;
+            margin: auto 30px;
+            border-radius: 5px;
+        }
+        .work-content img{
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        .work-content p{
+            padding: 50px 20px 15px 12px;
+            font-size: 14px;
+            font-weight: lighter;
+            text-align: justify;
+        }
+        .work-content button{
+            color: gray;
+            background-color: #000000;
+            /*border: .5px solid gray;*/
+            margin: 7px 0px;
+            padding: 10px 15px;
+            cursor: pointer;
+            border: none;
+            /*border-radius: 5px;*/
         }
     </style>
    </head>
@@ -106,21 +138,21 @@
         <h1>Worked On</h1>
         <div class="work-container">
             <div class="work-content work 1">
-                <img src="./work-image.jpg" width="334" height="250" alt="previous work 1">
+                <img src="./work-image.jpg" width="334" height="220" alt="previous work 1">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
                 </p>
                 <button>Continue Reading</button>
             </div>
             <div class="work-content work 2">
-                <img src="./work-image.jpg" width="334" height="250" alt="previous work 2">
+                <img src="./work-image.jpg" width="334" height="220" alt="previous work 2">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
                 </p>
                 <button>Continue Reading</button>
             </div>
             <div class="work-content work 3">
-                <img src="./work-image.jpg" width="334" height="250" alt="previous work 3">
+                <img src="./work-image.jpg" width="334" height="220" alt="previous work 3">
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, culpa earum nam omnis aliquid ab distinctio cumque corporis quasi tempore.
 
