chore: initializing section 4

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
             border: none;
             /*border-radius: 5px;*/
         }
+
+        #testimonials-section{
+            text-align: center;
+            margin: 7px 0px;
+        }
     </style>
    </head>
    <body>
@@ -160,6 +165,10 @@
                 <button>Continue Reading</button>
             </div>
         </div>        
+       </section>
+
+       <section id="testimonials-section">
+          <h1>Testimonials</h1>
        </section>
    </body>
 </html>
