chore: adding unstyled content for section 4

--- a/index.html
+++ b/index.html
@@ -169,6 +169,18 @@
 
        <section id="testimonials-section">
           <h1>Testimonials</h1>
+          <div class="test-container">
+            <div class="test-container">
+                 <h1>John Doe</h1>
+                 <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eligendi enim, nesciunt sit odio cumque aliquam commodi repellat veniam.
+                </p>
+                <button>Read More ></button>
+            </div>
+            <div class="test-container">
+                 <img src="./Female-member.jpg" width="300" height="300" alt="testimonial image">
+            </div>
+          </div>
        </section>
    </body>
 </html>
