chore: styling the image in section 4

--- a/index.html
+++ b/index.html
@@ -98,6 +98,19 @@
             text-align: center;
             margin: 7px 0px;
         }
+        .test-container{
+            display: flex;
+            justify-content: center;
+            height: 80vh;
+            
+        }
+        .test-content{
+            width: 50%;
+            margin: auto;
+        }
+        .test-image img{
+            border-radius: 50%;      
+        }
     </style>
    </head>
    <body>
@@ -170,14 +183,14 @@
        <section id="testimonials-section">
           <h1>Testimonials</h1>
           <div class="test-container">
-            <div class="test-container">
+            <div class="test-content test-words">
                  <h1>John Doe</h1>
                  <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae eligendi enim, nesciunt sit odio cumque aliquam commodi repellat veniam.
                 </p>
                 <button>Read More ></button>
             </div>
-            <div class="test-container">
+            <div class="test-content test-image">
                  <img src="./Female-member.jpg" width="300" height="300" alt="testimonial image">
             </div>
           </div>
