--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
    <head>
     <title>Portfolio V1</title>
     <style>
+        /* General styling for the Web page */
         body{
             background-color: black;
             color: white;
         }
+        /* Styling for the Home Section */
         .container{
             display: flex;
             height: 100vh;  
@@ -35,6 +37,7 @@
             border-radius: 5px;
         }
 
+        /* Styling for Skills Section */
         #skills-section{
             text-align: center;
         }
@@ -57,7 +60,8 @@
         .skill-card p{
             color: gray;
         }
-
+        
+        /* Styling for Previous Work Section */
         #work-section{
             text-align: center;
         }
@@ -93,20 +97,38 @@
             border: none;
             /*border-radius: 5px;*/
         }
-
+        /* Styling for Testimonials Section */
         #testimonials-section{
             text-align: center;
-            margin: 7px 0px;
+            padding: 10px 0px;
         }
         .test-container{
             display: flex;
             justify-content: center;
-            height: 80vh;
-            
+            height: 80vh;      
         }
         .test-content{
             width: 50%;
             margin: auto;
+        }
+        .test-words{
+            text-align: justify;
+            padding: 0px 15px;
+            margin-left: 35px;
+        }
+        .test-words p{
+            color: gray;
+            padding: 5px 0px;
+        }
+        .test-words button{
+            border: none;
+            border-radius: 3px;
+            padding: 13px 23px;
+            font-size: 11px;
+            font-weight: bold;
+            color: #ffffff;
+            background-color: #4406c8;
+            cursor: pointer;
         }
         .test-image img{
             border-radius: 50%;      
