chore: adding navigation with no background and setting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
             background-color: black;
             color: white;
         }
+
+        /* Header styles */
+        .navigation-bar{
+           text-align: center;
+        }
+        .navigation-bar ul li{
+            display: inline;
+        }
+        .navigation-bar ul li a{
+            text-decoration: none;
+            color: #ffffff;
+            padding: 0px 30px;
+        }
         /* Styling for the Home Section */
         .container{
             display: flex;
@@ -136,6 +149,19 @@
     </style>
    </head>
    <body>
+       <header>
+          <div class="navigation-bar">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                </ul>
+            </nav>
+
+          </div>
+       </header>
        <section id="home-section">
            <div class="container">
             <div class="same-margin div-1">
