chore: making the navigation sticky on the top

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         }
 
         /* Header styles */
-        .navigation-bar{
+        header{
            text-align: center;
+           position: sticky;
+           top: 0;
+           padding: 10px 0px;
         }
         .navigation-bar ul li{
             display: inline;
@@ -21,10 +24,12 @@
             color: #ffffff;
             padding: 0px 30px;
         }
+
+
         /* Styling for the Home Section */
         .container{
             display: flex;
-            height: 100vh;  
+            height: 90vh;  
         }
         .same-margin{
             margin: auto;
