chore: finalized design of the web page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         body{
             background-color: black;
             color: white;
+            padding: 0;
+            margin: 0;
         }
 
         /* Header styles */
@@ -15,6 +17,7 @@
            position: sticky;
            top: 0;
            padding: 10px 0px;
+           background-color: #4406c8;
         }
         .navigation-bar ul li{
             display: inline;
@@ -151,6 +154,14 @@
         .test-image img{
             border-radius: 50%;      
         }
+
+        /* Footer Styles */
+        footer{
+            background-color: #ffffff;
+            color: #000000;
+            padding: 10px 0px;
+            text-align: center;
+        }
     </style>
    </head>
    <body>
@@ -171,7 +182,7 @@
            <div class="container">
             <div class="same-margin div-1">
                 <div class="content">
-                    <h1>John <span>Doe.</span></h1>
+                    <h1>Mupenzi <span>Shalom.</span></h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat voluptate exercitationem eligendi deserunt perferendis dolorem tempore, nemo ex. Ab cumque pariatur rem neque repudiandae accusamus odio nihil ducimus! Sapiente, repellendus.</p>
                 </div>
             </div>
@@ -248,5 +259,11 @@
             </div>
           </div>
        </section>
+
+       <footer>
+          <div class="footer-container">
+                <p>&copy;MupenziShalom</p>
+          </div>
+       </footer>
    </body>
 </html>
