feat: final work on the web page done

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         /* Styling for the Home Section */
         .container{
             display: flex;
-            height: 90vh;  
+            height: 100vh;  
         }
         .same-margin{
             margin: auto;
@@ -65,7 +65,7 @@
         .skills-container{
             display: flex;
             justify-content: center;
-            height: 80vh;
+            height: 100vh;
         }
         .skill-card{
             background-color: #ffffff;
@@ -169,10 +169,10 @@
           <div class="navigation-bar">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#home-section">Home</a></li>
+                    <li><a href="#skills-section">Skills</a></li>
+                    <li><a href="#work-section">Work</a></li>
+                    <li><a href="#testimonials-section">Testimonials</a></li>
                 </ul>
             </nav>
 
